2006-06-01  John Eigelaar <jeigelaar@mweb.co.za>

	* src/spi_at91.c:
	* cdl/spi_at91.cdl:
	* include/spi_at91.h: Generalize so that multiple SPI
	busses can be driven.
	
2006-05-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/spi_at91.c: Use the AT91 GPIO/PIO macros to aid
	portability between different AT91 device.

2004-11-11  Sebastian Block <sebastianblock@gmx.net>

        * src/spi_at91.c: Fixed negation of the chip select signal when
	not using a 4 to 16 decoder

2004-10-13  Savin Zlobec  <savin@elatec.si> 

        * src/spi_at91.c: Fixed a typo in spi_at91_transfer reported by
        Nicolas Brouard.

2004-08-31  Savin Zlobec  <savin@elatec.si> 

        * include/spi_at91.h:
        * src/spi_at91.c:
        Moved SPI registers and bits defines to HAL headers, added support 
        for 4 to 16 decoder of chip select signals, support for transfers 
        larger than 2^16 and per device configurable delay between two 
        transfers.  
        * cdl/spi_at91.cdl: 
        Added option to enable support for 4 to 16 decoder of chip select 
        signals.  

2004-08-27  Savin Zlobec  <savin@elatec.si> 

        * cdl/spi_at91.cdl:
        * include/spi_at91.h:
        * src/spi_at91.c:
        * src/spi_at91_init.cxx:
        Atmel AT91 SPI bus driver implementation.   	 



//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or